# FaceSimilarity

./: README.md  faceSimilarity.py  pyproject.toml
